# clawseccheck

./: .gitignore  .gitleaks.toml  .markdownlint.jsonc  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SECURITY_MODEL.md  SKILL.md  SKILL_HE.md  audit.py  conftest.py  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  clawhub-publish.yml
clawcheck/: __init__.py  __main__.py  canary.py  catalog.py  checks.py  cli.py  collector.py  dryrun.py  guide.py  history.py  i18n.py  integrity.py  logsafe.py  monitor.py  native.py  percentile.py  redteam.py  report.py  risk.py  sarif.py  scoring.py
clawseccheck/: __init__.py  adjudication.py  ansi.py  attest.py  baseline.py  behavioral.py  brand.py  canary.py  catalog.py  checks.py  cli.py  collector.py  configloader.py  coverage.py  dedup.py  dossier.py  dryrun.py  guide.py  history.py  hostwatch.py  i18n.py  incident.py  integrity.py  ledger.py  locking.py  logdiscovery.py  logsafe.py  logscan.py  menu.py  monitor.py  multiturn.py  native.py  palette.py  prescan.py  redteam.py  report.py  risk.py  safeio.py  sar.py  sarif.py  (+10 more)
clawseccheck/checks/: __init__.py  _agents.py  _capability.py  _config.py  _content.py  _egress.py  _host.py  _lifecycle.py  _mcp.py  _shared.py  _vet.py
docs/: ATTESTATION.md  CHECKS.md  CHECK_AUTHORING.md  FAQ.md  HARDENING_BACKLOG.md  OUTPUT_SCHEMA.md  README.md  RELEASING.md  THREAT_COVERAGE.md  USAGE.md
docs/design/: severity-separability.md
docs/research/: multiagent-privilege-separation.md
fixtures/: bad_c038_mcp_toolpoison.json  bad_f007_lp1_under_declared.json  clean_c038_mcp_plain.json  clean_f007_lp_matched.json  conftest.py
fixtures/bad_b104_offboarding/: openclaw.json
fixtures/bad_b130_coding_profile_no_exec_fields/: openclaw.json
fixtures/bad_b130_coding_profile_strict_inline_eval/: openclaw.json
fixtures/bad_b130_web_fetch_enabled/: openclaw.json
fixtures/bad_b13_ast05_url_own_line/: openclaw.json
fixtures/bad_b150_mcp_pipe_to_run/: openclaw.json
fixtures/bad_b152_orphaned_plugin/: openclaw.json
fixtures/bad_b166_mcp_exfil_args/: openclaw.json
fixtures/bad_b167_appserver_pipe_to_shell/: openclaw.json
fixtures/bad_b169_hook_template_directive/: openclaw.json
fixtures/bad_b170_trust_inversion/: openclaw.json
fixtures/bad_b171_bash_wildcard/: openclaw.json
fixtures/bad_b172_exec_approvals_allow_always/: exec-approvals.json
fixtures/bad_b173_critical_suppression/: openclaw.json
fixtures/bad_b173_low_severity_suppression/: openclaw.json
fixtures/bad_b173_trusted_proxy_notice_suppression/: openclaw.json
fixtures/bad_b174_installpolicy_allow_insecure_path/: openclaw.json
fixtures/bad_b174_installpolicy_disabled/: openclaw.json
fixtures/bad_b175_workshop_auto_pipeline/: openclaw.json
fixtures/bad_b175_workshop_sandboxed_warn/: openclaw.json
fixtures/bad_b178_cleartext_baseurl/: openclaw.json
fixtures/bad_b178_private_network_baseurl/: openclaw.json
fixtures/bad_b179_hooks_internal_extradirs/: openclaw.json
fixtures/bad_b184_registry_env_dotenv/: .env
fixtures/bad_b229_mcp_fs_root_trifecta/: openclaw.json
fixtures/bad_b230_mcp_docker_privileged/: openclaw.json
fixtures/bad_b230_mcp_docker_sock/: openclaw.json
fixtures/bad_b230_mcp_header_auth/: openclaw.json
fixtures/bad_b230_mcp_secret_env/: openclaw.json
fixtures/bad_b283_ctxvis_account_all/: openclaw.json
references/: cli-flags.md  design-system.md  maintainers.md
scripts/: bump.py  gen_banner.py  gen_checks_docs.py  redos_audit.py
tests/: checks_public_api.txt  grounded_schema_paths.txt  test_adjudication.py  test_agent_watch.py  test_assurance_coverage.py  test_attest.py  test_attest_agents.py  test_attest_delegation.py  test_auto_history.py  test_b01.py  test_b017.py  test_b020_gateway_fix.py  test_b024_sandbox_ordering.py  test_b025_b026_remediation.py  test_b03.py  test_b06.py  test_b073_evidence_redaction.py  test_b074_forged_provenance.py  test_b075_mcp_tool_inheritance.py  test_b076_mcp_bypass_highblast.py  test_b077_config_audit_log.py  test_b078_config_health_integrity.py  test_b079_session_approval_policy.py  test_b08.py  test_b085_agent_config_html.py  test_b086_scan_priority.py  test_b087_b61_own_dir.py  test_b089_frontmatter.py  test_b09.py  test_b091_paraphrase.py  test_b091_semantic_suppress.py  test_b092_coverage_gap.py  test_b093_decoded_b63.py  test_b097_fenced_bypass.py  test_b100_clickfix_setup.py  test_b100_whitespace_redos.py  test_b101_run_all_isolation.py  test_b102_boundary_payload.py  test_b102_redos.py  test_b103_bootstrap_cap.py  (+349 more)
(+571 files in other folders)
