[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "clawseccheck"
dynamic = ["version"]
description = "Local, read-only OpenClaw security self-audit (zero dependencies)."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "gl0di" }]
keywords = ["openclaw", "security", "audit", "ai-agent", "prompt-injection", "clawhub"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Environment :: Console",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/gl0di/clawseccheck"
Issues = "https://github.com/gl0di/clawseccheck/issues"

[project.scripts]
clawseccheck = "clawseccheck.cli:main"

[tool.setuptools]
packages = ["clawseccheck", "clawseccheck.checks"]

[tool.setuptools.dynamic]
version = { attr = "clawseccheck.__version__" }
