[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "clawseccheck"
dynamic = ["version"]
description = "Local, read-only OpenClaw security self-audit (zero dependencies)."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "gl0di" }]
keywords = ["openclaw", "security", "audit", "ai-agent", "prompt-injection", "clawhub"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Environment :: Console",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/gl0di/clawseccheck"
Issues = "https://github.com/gl0di/clawseccheck/issues"

[project.scripts]
clawseccheck = "clawseccheck.cli:main"

[tool.setuptools]
packages = ["clawseccheck", "clawseccheck.checks"]

[tool.setuptools.dynamic]
version = { attr = "clawseccheck.__version__" }

[tool.ruff.lint.per-file-ignores]
# The checks/ aggregator re-exports every topic module's symbols (incl. privates) so
# they stay importable as `from clawseccheck.checks import X`. It deliberately has no
# __all__ (CLAUDE.md §3.1-a), so those re-export imports read as "unused" to pyflakes.
# F811: the aggregator also keeps in-function lazy re-imports (to avoid load cycles)
# that shadow a top-level import once the top-level user moves to a topic module.
"clawseccheck/checks/__init__.py" = ["F401", "F811"]
